added some more social medias and announcements

--- a/templates/anouncement.html
+++ b/templates/anouncement.html
@@ -66,6 +66,16 @@
 							<a href="https://discord.new/3xd7Cj7um9Az" class="btn btn-primary d-block">LINK</a>
 						</div>
 					</div>
+					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+						<div class="card-body">
+							<h5 class="card-title text-center">My Python Package</h5>
+							<p class="card-text text-center">
+								Use my Python Package!!
+							</p>
+							<br />
+							<a href="https://pypi.org/project/jak-python-package/" class="btn btn-primary d-block">LINK</a>
+						</div>
+					</div>
 				</div>
 			{% else %}
 				<center><h5>You need to Login or SignUp</h5></center>
