--- a/templates/social_media.html
+++ b/templates/social_media.html
@@ -21,7 +21,7 @@
                 <div class="card-body">
                     <h5 class="card-title text-center">My YouTube</h5>
                     <p class="card-text text-center">
-                        Subscribe to my YouTube!!
+                        Subscribe my YouTube Channel!!
                     </p>
                     <a href="https://www.youtube.com/channel/UC6IPfVhkqfcfBZCko6Q9mnQ" class="btn btn-primary d-block">Go to My YouTube</a>
                 </div>
@@ -30,8 +30,9 @@
                 <div class="card-body">
                     <h5 class="card-title text-center">My Instagram</h5>
                     <p class="card-text text-center">
-                        Follow me in Instagram!!
+                        Follow Me in Instagram!!
                     </p>
+					<br />
                     <a href="https://www.instagram.com/xxjonakadiptaxx/" class="btn btn-primary d-block">Go to My Instagram</a>
                 </div>
             </div>
@@ -41,6 +42,7 @@
                     <p class="card-text text-center">
 						Join my Reddit Community!!
                     </p>
+					<br />
                     <a href="https://www.reddit.com/r/BeastNight_TV/" class="btn btn-primary d-block">Go to My Reddit</a>
                 </div>
             </div>
@@ -48,7 +50,7 @@
                 <div class="card-body">
                     <h5 class="card-title text-center">My Twitch</h5>
                     <p class="card-text text-center">
-						Follow me on Twitch!!
+						Follow Me in Twitch!!
                     </p>
                     <a href="https://www.twitch.tv/jonakadiptakalita_2596/" class="btn btn-primary d-block">Go to My Twitch</a>
                 </div>
@@ -57,7 +59,7 @@
                 <div class="card-body">
                     <h5 class="card-title text-center">My Github</h5>
                     <p class="card-text text-center">
-						Follow me on Github
+						Follow Me in Github!!
                     </p>
                     <a href="https://github.com/Jonak-Adipta-Kalita" class="btn btn-primary d-block">Go to My Github</a>
                 </div>
@@ -71,7 +73,35 @@
                     <a href="https://discord.gg/S3UfGkW" class="btn btn-primary d-block">Go to My Discord</a>
 				</div>
             </div>
+			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title text-center">My Twitter</h5>
+                    <p class="card-text text-center">
+						Follow Me in Twitter!!
+                    </p>
+                    <a href="https://twitter.com/AdiptaJonak" class="btn btn-primary d-block">Go to My Twitter</a>
+				</div>
+            </div>
+			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title text-center">My Itch.io</h5>
+                    <p class="card-text text-center">
+						Follow Me in Itch.io!!
+                    </p>
+                    <a href="https://jonak-adipta-kalita.itch.io/" class="btn btn-primary d-block">Go to My Itch.io</a>
+				</div>
+            </div>
+			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+                <div class="card-body">
+                    <h5 class="card-title text-center">My Spotify</h5>
+                    <p class="card-text text-center">
+						Follow Me in Spotify!!
+                    </p>
+                    <a href="https://open.spotify.com/user/31cypdycu52u6rj3bsfcldmqrlji" class="btn btn-primary d-block">Go to My Spotify</a>
+				</div>
+            </div>
 		</div>
 	</div>
+	<br />
 	<br />
 	{% endblock %}
