--- a/templates/about.html
+++ b/templates/about.html
@@ -36,7 +36,7 @@
                 I also teach some of my colleagues some 'Python'. I love Python and JavaScript the most.
 				I am a Youtuber too. I love to play Games such as NFS, COD, AC, Among Us, GTA, etc. I 
 				am a huge fan of Anime and watched 'Pokemon', 'One_Piece', 'Beyblade', 'DBG'. If you 
-				want to get to my Instagram, Github, Reddit you have to find it by yourself. Actually 
+				want to get to my Instagram or Github you have to find it by yourself. Actually 
 				you'll find my Social Medias in the Social Media Page.
             </p>
             <center>
