added my whatsapp sticker pack to announcements.htm;

--- a/templates/anouncement.html
+++ b/templates/anouncement.html
@@ -76,6 +76,16 @@
 							<a href="https://pypi.org/project/jak-python-package/" class="btn btn-primary d-block">LINK</a>
 						</div>
 					</div>
+					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+						<div class="card-body">
+							<h5 class="card-title text-center">My WhatsApp Sticker Pack</h5>
+							<p class="card-text text-center">
+								Use my WhatsApp Sticker Pack!!
+							</p>
+							<br />
+							<a href="http://sticker.ly/s/N4ILIZ" class="btn btn-primary d-block">LINK</a>
+						</div>
+					</div>
 				</div>
 			{% else %}
 				<center><h5>You need to Login or SignUp</h5></center>
