--- a/templates/base.html
+++ b/templates/base.html
@@ -24,8 +24,18 @@
 				</button>
 				<div class="collapse navbar-collapse" id="navbarNavDropdown">
 					<ul class="navbar-nav mr-auto">
-						{% block navbarlink %}
-						{% endblock %}
+						<li class="nav-item font-weight-bold">
+							<a class="nav-link" href="/">Home<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item font-weight-bold">
+							 <a class="nav-link" href="/about/">About<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item font-weight-bold">
+							<a class="nav-link" href="/social_media/">Social Media<span class="sr-only">(current)</span></a>
+						</li>
+						<li class="nav-item font-weight-bold">
+							<a class="nav-link" href="/contact_me/">Contact<span class="sr-only">(current)</span></a>
+						</li>
 					</ul>
 					<form method='get' action="/search" class="form-inline my-2 my-lg-0 mr-3">
 						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query" />
