--- a/templates/anouncement.html
+++ b/templates/anouncement.html
@@ -28,7 +28,7 @@
 							<p class="card-text text-center">
 								Checkout my Own API!!
 							</p>
-							<a href="http://jak-api-dot-com.herokuapp.com/" class="btn btn-primary d-block">LINK</a>
+							<a href="https://jak-api-dot-com.herokuapp.com/" class="btn btn-primary d-block">LINK</a>
 						</div>
 					</div>
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
