added my javascript package!!

--- a/templates/anouncement.html
+++ b/templates/anouncement.html
@@ -65,8 +65,17 @@
 							<p class="card-text text-center">
 								Use my WhatsApp Sticker Pack!!
 							</p>
-							<br />
 							<a href="http://sticker.ly/s/N4ILIZ" class="btn btn-primary d-block">LINK</a>
+						</div>
+					</div>
+					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+						<div class="card-body">
+							<h5 class="card-title text-center">My JavaScript Package</h5>
+							<p class="card-text text-center">
+								Use my JavaScript Package!!
+							</p>
+							<br />
+							<a href="https://www.npmjs.com/package/@xxjonakadiptaxx/jak_javascript_package" class="btn btn-primary d-block">LINK</a>
 						</div>
 					</div>
 				</div>
