--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <div class="main_body">
+    <div class="main_body" id="main_body">
         <div class="header fixed-top">
             <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <a class="navbar-brand" href="/">
