--- a/templates/home.html
+++ b/templates/home.html
@@ -48,6 +48,15 @@
                         <a href="discord_widget/" class="btn btn-primary d-block">Go to Discord Widget</a>
                     </div>
                 </div>
+				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title text-center">My Web Builds</h5>
+                        <p class="card-text text-center">
+                            Here you'll find all my Web Builds.
+                        </p>
+                        <a href="web_builds/" class="btn btn-primary d-block">Go to My Web Builds</a>
+                    </div>
+                </div>
 			</div>
         </div>
 		<br/>
