added external link fontawesome icon to all the links that opens in new tab!!

--- a/templates/anouncement.html
+++ b/templates/anouncement.html
@@ -10,7 +10,7 @@
 							<p class="card-text text-center">
 								Become My Friend In PokeGo!!
 							</p>
-							<a href="PokeGoCode/" target="_blank" class="btn btn-primary d-block">CODE</a>
+							<a href="PokeGoCode/" class="btn btn-primary d-block">CODE</a>
 						</div>
 					</div>
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -19,7 +19,7 @@
 							<p class="card-text text-center">
 								Join my Whatsapp Group!!
 							</p>
-							<a href="https://chat.whatsapp.com/EOOq0J7ixKsBeiOOyrCyZH" target="_blank" class="btn btn-primary d-block">LINK</a>
+							<a href="https://chat.whatsapp.com/EOOq0J7ixKsBeiOOyrCyZH" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 						</div>
 					</div>
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -28,7 +28,7 @@
 							<p class="card-text text-center">
 								Checkout my Own API!!
 							</p>
-							<a href="https://jak-api-dot-com.herokuapp.com/" target="_blank" class="btn btn-primary d-block">LINK</a>
+							<a href="https://jak-api-dot-com.herokuapp.com/" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 						</div>
 					</div>
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -37,7 +37,7 @@
 							<p class="card-text text-center">
 								Invite my Discord Bot to your Discord Server!!
 							</p>
-							<a href="https://discord.com/oauth2/authorize?client_id=756402881913028689&scope=bot" target="_blank" class="btn btn-primary d-block">INVITE</a>
+							<a href="https://discord.com/oauth2/authorize?client_id=756402881913028689&scope=bot" target="_blank" class="btn btn-primary d-block">INVITE <i class="fas fa-external-link-alt"></i></a>
 						</div>
 					</div>
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -46,7 +46,7 @@
 							<p class="card-text text-center">
 								Use my Discord Template to Create your Server!!
 							</p>
-							<a href="https://discord.new/3xd7Cj7um9Az" target="_blank" class="btn btn-primary d-block">LINK</a>
+							<a href="https://discord.new/3xd7Cj7um9Az" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 						</div>
 					</div>
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -55,7 +55,7 @@
 							<p class="card-text text-center">
 								Use my WhatsApp Sticker Pack!!
 							</p>
-							<a href="http://sticker.ly/s/N4ILIZ" target="_blank" class="btn btn-primary d-block">LINK</a>
+							<a href="http://sticker.ly/s/N4ILIZ" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 						</div>
 					</div>
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -64,7 +64,7 @@
 							<p class="card-text text-center">
 								Use my Python Package!!
 							</p>
-							<a href="https://pypi.org/project/beast-night-tv/" target="_blank" class="btn btn-primary d-block">LINK</a>
+							<a href="https://pypi.org/project/beast-night-tv/" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 						</div>
 					</div>
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -73,7 +73,7 @@
 							<p class="card-text text-center">
 								Use my JavaScript Package!!
 							</p>
-							<a href="https://www.npmjs.com/package/@xxjonakadiptaxx/jak_javascript_package" target="_blank" class="btn btn-primary d-block">LINK</a>
+							<a href="https://www.npmjs.com/package/@xxjonakadiptaxx/jak_javascript_package" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 						</div>
 					</div>
 				</div>
