--- a/templates/search.html
+++ b/templates/search.html
@@ -16,7 +16,7 @@
 							<h5 class="card-title">
 								{{ i.game_name }}
 							</h5>
-							<a href="{{ i.game_link }}" target="_blank" class="btn btn-primary">Play</a>
+							<a href="{{ i.game_link }}" target="_blank" class="btn btn-primary">Play <i class="fas fa-external-link-alt"></i></a>
 						</div>
 					</div>
 				{% endfor %}
@@ -27,7 +27,7 @@
 							<h5 class="card-title">
 								{{ i.game_name }}
 							</h5>
-							<a href="{{ i.game_link }}" target="_blank" class="btn btn-primary">Play</a>
+							<a href="{{ i.game_link }}" target="_blank" class="btn btn-primary">Play <i class="fas fa-external-link-alt"></i></a>
 						</div>
 					</div>
 				{% endfor %}
