--- a/templates/web_builds.html
+++ b/templates/web_builds.html
@@ -6,37 +6,37 @@
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
 				<div class="card-body">
 					<h6 class="card-title text-center">JAK News App</h6>
-					<a href="https://jak-news-app.netlify.app" target="_blank" class="btn btn-primary d-block">LINK</a>
+					<a href="https://jak-news-app.netlify.app" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 				</div>
 			</div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
 				<div class="card-body">
 					<h6 class="card-title text-center">JAK Pokedex</h6>
-					<a href="https://jak-pokedex.netlify.app" target="_blank" class="btn btn-primary d-block">LINK</a>
+					<a href="https://jak-pokedex.netlify.app" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 				</div>
 			</div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
 				<div class="card-body">
 					<h6 class="card-title text-center">JAK Covid-19 Tracker</h6>
-					<a href="https://jak-covid19-tracker.netlify.app" target="_blank" class="btn btn-primary d-block">LINK</a>
+					<a href="https://jak-covid19-tracker.netlify.app" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 				</div>
 			</div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
 				<div class="card-body">
 					<h6 class="card-title text-center">JAK Slack Clone</h6>
-					<a href="https://jak-slack-clone.netlify.app" target="_blank" class="btn btn-primary d-block">LINK</a>
+					<a href="https://jak-slack-clone.netlify.app" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 				</div>
 			</div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
 				<div class="card-body">
 					<h6 class="card-title text-center">JAK Youtube Clone</h6>
-					<a href="https://jak-youtube-clone.netlify.app" target="_blank" class="btn btn-primary d-block">LINK</a>
+					<a href="https://jak-youtube-clone.netlify.app" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 				</div>
 			</div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
 				<div class="card-body">
 					<h6 class="card-title text-center">JAK Anime Searcher App</h6>
-					<a href="https://jak-anime-searcher-app.netlify.app" target="_blank" class="btn btn-primary d-block">LINK</a>
+					<a href="https://jak-anime-searcher-app.netlify.app" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 				</div>
 			</div>
 		</div>
