--- a/templates/base.html
+++ b/templates/base.html
@@ -4,10 +4,15 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes">
-	<link rel="icon" type="image/jpg" href="{% static 'images/logo.jpg' %}">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-	<link rel="stylesheet" href="{% static 'styles/base.css' %}">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=yes" />
+	<meta name="description" content="Jonak Adipta Kalita's Website" />
+	<meta name="keywords" content="Website, MyGames, MySocialMedias, MyPhotos, MyYoutubeVideos, MyWebBuilds, MyDiscordWidget" />
+	<meta name="author" content="Jonak Adipta Kalita" />
+	<meta name="publisher" content="Jonak Adipta Kalita" />
+	<meta name="copyright" content="Jonak Adipta Kalita" />
+	<link rel="icon" type="image/jpg" href="{% static 'images/logo.jpg' %}" />
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous" />
+	<link rel="stylesheet" href="{% static 'styles/base.css' %}" />
     <title>JAK Website | {% block title%} {% endblock %}</title>
 	{% block head %} {% endblock %}
 </head>
