--- a/templates/youtube_videos.html
+++ b/templates/youtube_videos.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
 {% block title %} YouTube Videos {% endblock %}
 {% block body %}
-	<div class=""></div>
+	<div class="container"></div>
 {% endblock %}
