--- a/templates/my_photos.html
+++ b/templates/my_photos.html
@@ -20,13 +20,13 @@
 					{% if prev %}
 						<button class="btn btn-primary"><a class="text-light text-decoration-none" href="/my_photos?page={{prev}}">&laquo; Previous</a></button>
 					{% else %}
-						<button disabled class="btn btn-primary"><a class="text-light text-decoration-none">&laquo; Previous</a></button>
+						<button disabled class="btn btn-primary cursor-not-allowed"><a class="text-light text-decoration-none">&laquo; Previous</a></button>
 					{% endif %}
 					
 					{% if nxt %}
 						<button class="btn btn-primary float-right"><a class="text-light text-decoration-none" href="/my_photos?page={{nxt}}">Next &raquo;</a></button>
 					{% else %}
-						<button disabled class="btn btn-primary float-right"><a class="text-light text-decoration-none">Next &raquo;</a></button>
+						<button disabled class="btn btn-primary float-right cursor-not-allowed"><a class="text-light text-decoration-none">Next &raquo;</a></button>
 					{% endif %}
 				</div>
 			{% else %}
