--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,5 @@
 	{% extends 'base.html' %}
-	{% block title %} Search {% endblock %}
-	{% block navbarlink %}
-	<li class="nav-item font-weight-bold">
+	{% block title %} Search - {{query}} {% endblock %}
 	{% block body %}
 	<div class="container my-3">
 		<h3>Search Results:</h3>
