--- a/templates/my_own.html
+++ b/templates/my_own.html
@@ -6,7 +6,7 @@
 			<div class="row">
 				{% for i in games_own %}
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-						<img loading="lazy" src="/media/{{i.image}}" class="padded card-img-top" alt="game_img">
+						<img loading="lazy" src="/media/{{i.image}}" class="padded card-img-top" alt="game_img" />
 						<div class="card-body">
 							<h5 class="card-title">
 								{{ i.game_name }}
