--- a/templates/search.html
+++ b/templates/search.html
@@ -9,7 +9,7 @@
 			<div class="row">
 				{% for i in GamesFav %}
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-						<img loading="lazy" src="/media/{{i.image}}" class="padded card-img-top" alt="game_img">
+						<img loading="lazy" src="/media/{{i.image}}" class="padded card-img-top" alt="game_img" />
 						<div class="card-body">
 							<h5 class="card-title">
 								{{ i.game_name }}
@@ -20,7 +20,7 @@
 				{% endfor %}
 				{% for i in GamesOwn %}
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-						<img loading="lazy" src="/media/{{i.image}}" class="padded card-img-top" alt="game_img">
+						<img loading="lazy" src="/media/{{i.image}}" class="padded card-img-top" alt="game_img" />
 						<div class="card-body">
 							<h5 class="card-title">
 								{{ i.game_name }}
@@ -31,7 +31,7 @@
 				{% endfor %}
 				{% for i in MyPhotos %}
 					<div loading="lazy" class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-						<img src="/media/{{i.image}}" class="card-img-top" alt="image"/>
+						<img src="/media/{{i.image}}" class="card-img-top" alt="image" />
 						<div class="card-body">
 							<h5 class="card-title">
 								{{i.name}}
