changed footer background color

--- a/static/styles/base.css
+++ b/static/styles/base.css
@@ -3,7 +3,7 @@
     left: 0;
     bottom: 0;
     width: 100%;
-    background-color: black;
+    background-color: #7a7566;
     color: white;
     text-align: center;
 	display: block;
