--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,7 @@
 		{% block body %}
 		{% endblock %}
 		<footer class="footer">
-			<p class="mb-0 text-center">&copy; 2021 jonakadiptakalita.com</p>
+			<p class="mb-0 mt-0 text-center">&copy; 2021 jonakadiptakalita.com</p>
 		</footer>
     </div>
 	
