--- a/templates/about.html
+++ b/templates/about.html
@@ -17,8 +17,7 @@
         <div class="container">
             <p class="main_text">
                 My name is JONAK ADIPTA KALITA. I am a student in Kendriya Vidyalaya Mangaldoi, I am 
-				currently studying in standard '8th'. My mom is a Banker and my Dad is a Mathematics 
-				Teacher. I am a Coder and also a 'Home Game Developer'. I code for fun but sometimes
+				currently studying in standard '8th'. I am a Coder and also a 'Home Game Developer'. I code for fun but sometimes
                 I also teach some of my colleagues some 'Python'. I love Python and JavaScript the most.
 				I am a Youtuber too. I love to play Games such as NFS, COD, AC, Among Us, GTA, etc. I 
 				am a huge fan of Anime and watched 'Pokemon', 'One_Piece', 'Beyblade', 'DBG'. If you 
