added JAK Pokemon TCG Prog to the web_builds.html

--- a/templates/web_builds.html
+++ b/templates/web_builds.html
@@ -39,6 +39,12 @@
 					<a href="https://jak-anime-searcher-app.netlify.app" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
 				</div>
 			</div>
+			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+				<div class="card-body">
+					<h6 class="card-title text-center">JAK Pokemon TCG Prog</h6>
+					<a href="https://jak-pokemon-tcg-prog.netlify.app" target="_blank" class="btn btn-primary d-block">LINK <i class="fas fa-external-link-alt"></i></a>
+				</div>
+			</div>
 		</div>
 	</div>
 {% endblock %}
