--- a/templates/notifications.html
+++ b/templates/notifications.html
@@ -1,5 +1,5 @@
 	{% extends 'base.html' %}
-	{% block title %} Games {% endblock %}
+	{% block title %} Notifications {% endblock %}
 	{% block body %}
 		<div class="container">
 			<div class="row">
