folderized some templates

--- a/templates/announcements/anouncement.html
+++ b/templates/announcements/anouncement.html
@@ -10,7 +10,7 @@
 							<p class="card-text text-center">
 								Become My Friend In PokeGo!!
 							</p>
-							<a href="PokeGoCode/" class="btn btn-primary d-block">CODE</a>
+							<a href="poke_go_code/" class="btn btn-primary d-block">CODE</a>
 						</div>
 					</div>
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
