--- a/templates/discord_widget.html
+++ b/templates/discord_widget.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} Anouncements {% endblock %}
+{% block title %} Discord Widget {% endblock %}
 {% block body %}
 	<div class="container">
 		<center>
