--- a/templates/your_profile/your_account.html
+++ b/templates/your_profile/your_account.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} My Account {% endblock %}
+{% block title %} Your Account {% endblock %}
 {% block body %}
 <br />
 <div class="container">
@@ -7,15 +7,15 @@
 	<form>
 		<div class="form-group">
 			<label for="my_accountName">Your Name</label>
-			<input type="text" class="form-control" id="my_accountName" value="{{user.first_name}}" aria-describedby="nameHelp" placeholder="Enter your Name">
+			<input type="text" class="form-control" id="my_accountName" value="{{user.first_name}}" aria-describedby="nameHelp" placeholder="Enter your Name" />
 		</div>
 		<div class="form-group">
 			<label for="my_accountUsername">Your Username</label>
-			<input type="text" class="form-control" id="my_accountUsername" value="{{user.username}}" aria-describedby="usernameHelp" placeholder="Enter your Username">
+			<input type="text" class="form-control" id="my_accountUsername" value="{{user.username}}" aria-describedby="usernameHelp" placeholder="Enter your Username" />
 		</div>
 		<div class="form-group">
 			<label for="my_accountEmail1">Your Email</label>
-			<input type="email" class="form-control" id="my_accountEmail1" value="{{user.email}}" aria-describedby="emailHelp" placeholder="Enter your Email">
+			<input type="email" class="form-control" id="my_accountEmail1" value="{{user.email}}" aria-describedby="emailHelp" placeholder="Enter your Email" />
 		</div>
 	</form>
 	<div>
