--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -16,7 +16,7 @@
                         <input type="email" required class="form-control" id="email" placeholder="Enter your Email" name="email" />
                     </div>
                     <div class="form-group">
-                        <label for="phone">Your Phone Number (with country code)</label>
+                        <label for="phone">Your Phone Number (with COUNTRY CODE)</label>
                         <input type="tel" required class="form-control" id="phone" placeholder="Enter your Phone Number" name="phone" />
                     </div>
                     <div class="form-group">
