the indetation is much better now

--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -1,6 +1,6 @@
-	{% extends 'base.html' %}
-	{% block title %} Contact Me {% endblock %}
-	{% block body %}
+{% extends "base.html" %}
+{% block title %} Contact Me {% endblock %}
+{% block body %}
 	<div class="main-container container-fluid my-4">
 		<div class="row">
 			<div class="col-lg-6 offset-lg-2">
@@ -23,7 +23,7 @@
                         <label for="desc">Describe what you want to contact me for here!!</label>
                         <textarea type="text" required class="form-control" id="desc" placeholder="Your Message  (MAX: 500 Keywords)" name="desc"></textarea>
                     </div>
-					<div class="g-recaptcha" data-sitekey="{{RECAPTCHA_CLIENT_KEY}}"></div>
+					<div class="g-recaptcha" data-sitekey="{{ RECAPTCHA_CLIENT_KEY }}"></div>
                     <button type="submit" class="btn btn-primary mt-2">Submit</button>
                 </form>
 			</div>
@@ -31,4 +31,4 @@
 	</div>
 	<br />
 	<br />
-	{% endblock %}
+{% endblock %}
