--- a/templates/discord_widget.html
+++ b/templates/discord_widget.html
@@ -1,9 +1,16 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 {% block title %} Discord Widget {% endblock %}
 {% block body %}
 	<div class="container">
 		<center>
-			<iframe src="https://discord.com/widget?id=752800104112717826&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+			<iframe
+				src="https://discord.com/widget?id=752800104112717826&theme=dark"
+				width="350"
+				height="500"
+				allowtransparency="true"
+				frameborder="0"
+				sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
+			></iframe>
 		</center>
 	</div>
 	<br />
