--- a/templates/games/games.html
+++ b/templates/games/games.html
@@ -1,6 +1,6 @@
-	{% extends 'base.html' %}
-	{% block title %} Games {% endblock %}
-	{% block body %}
+{% extends "base.html" %}
+{% block title %} Games {% endblock %}
+{% block body %}
     <div class="container">
 		<div class="row">
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -23,4 +23,4 @@
             </div>
 		</div>
 	</div>
-	{% endblock %}
+{% endblock %}
