--- a/templates/games/my_fav.html
+++ b/templates/games/my_fav.html
@@ -1,21 +1,32 @@
-	{% extends 'base.html' %}
-	{% block title %} Games | My Fav {% endblock %}
-	{% block body %}
+{% extends "base.html" %}
+{% block title %} Games | My Fav {% endblock %}
+{% block body %}
     <div class="container">
 		<div class="row">
 			{% for i in games_fav %}
-			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-				<img loading="lazy" src="/media/{{i.image}}" class="padded card-img-top" alt="game_img" />
-				<div class="card-body">
-					<h5 class="card-title">
-						{{ i.game_name }}
-					</h5>
-					<a href="{{ i.game_link }}" target="_blank" class="btn btn-primary">Play <i class="fas fa-external-link-alt"></i></a>
-				</div>
-			</div> 
+				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+					<img
+						loading="lazy"
+						src="/media/{{ i.image }}"
+						class="padded card-img-top"
+						alt="game_img"
+					/>
+					<div class="card-body">
+						<h5 class="card-title">
+							{{ i.game_name }}
+						</h5>
+						<a
+							href="{{ i.game_link }}"
+							target="_blank"
+							class="btn btn-primary"
+						>
+							Play <i class="fas fa-external-link-alt"></i>
+						</a>
+					</div>
+				</div> 
 			{% endfor %}			
 		</div>
 	</div>
 	<br/>
 	<br/>
-	{% endblock %}
+{% endblock %}
