--- a/templates/social_media.html
+++ b/templates/social_media.html
@@ -1,6 +1,6 @@
-	{% extends 'base.html' %}
-	{% block title %} Social Media {% endblock %}
-	{% block body %}
+{% extends "base.html" %}
+{% block title %} Social Media {% endblock %}
+{% block body %}
 	<div class="container">
         <div class="row">
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -9,7 +9,13 @@
                     <p class="card-text text-center">
                         Subscribe my YouTube Channel!!
                     </p>
-                    <a href="https://www.youtube.com/channel/UC6IPfVhkqfcfBZCko6Q9mnQ" target="_blank" class="btn btn-primary d-block">Go to My YouTube  <i class="fas fa-external-link-alt"></i></a>
+                    <a
+						href="https://www.youtube.com/channel/UC6IPfVhkqfcfBZCko6Q9mnQ"
+						target="_blank"
+						class="btn btn-primary d-block"
+					>
+						Go to My YouTube  <i class="fas fa-external-link-alt"></i>
+					</a>
                 </div>
             </div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -19,7 +25,13 @@
                         Follow Me in Instagram!!
                     </p>
 					<br />
-                    <a href="https://www.instagram.com/xxjonakadiptaxx/" target="_blank" class="btn btn-primary d-block">Go to My Instagram <i class="fas fa-external-link-alt"></i></a>
+                    <a
+						href="https://www.instagram.com/xxjonakadiptaxx/"
+						target="_blank"
+						class="btn btn-primary d-block"
+					>
+						Go to My Instagram <i class="fas fa-external-link-alt"></i>
+					</a>
                 </div>
             </div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -29,7 +41,13 @@
 						Join my Reddit Community!!
                     </p>
 					<br />
-                    <a href="https://www.reddit.com/r/BeastNight_TV/" target="_blank" class="btn btn-primary d-block">Go to My Reddit <i class="fas fa-external-link-alt"></i></a>
+                    <a
+						href="https://www.reddit.com/r/BeastNight_TV/"
+						target="_blank"
+						class="btn btn-primary d-block"
+					>
+						Go to My Reddit <i class="fas fa-external-link-alt"></i>
+					</a>
                 </div>
             </div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -38,7 +56,13 @@
                     <p class="card-text text-center">
 						Follow Me in Twitch!!
                     </p>
-                    <a href="https://www.twitch.tv/jonakadiptakalita_2596/" target="_blank" class="btn btn-primary d-block">Go to My Twitch <i class="fas fa-external-link-alt"></i></a>
+                    <a
+						href="https://www.twitch.tv/jonakadiptakalita_2596/"
+						target="_blank"
+						class="btn btn-primary d-block"
+					>
+						Go to My Twitch <i class="fas fa-external-link-alt"></i>
+					</a>
                 </div>
             </div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -47,7 +71,13 @@
                     <p class="card-text text-center">
 						Follow Me in Github!!
                     </p>
-                    <a href="https://github.com/Jonak-Adipta-Kalita" target="_blank" class="btn btn-primary d-block">Go to My Github <i class="fas fa-external-link-alt"></i></a>
+                    <a
+						href="https://github.com/Jonak-Adipta-Kalita"
+						target="_blank"
+						class="btn btn-primary d-block"
+					>
+						Go to My Github <i class="fas fa-external-link-alt"></i>
+					</a>
                 </div>
             </div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -56,7 +86,13 @@
                     <p class="card-text text-center">
 						Join my Discord Community!!
                     </p>
-                    <a href="https://discord.gg/S3UfGkW" target="_blank" class="btn btn-primary d-block">Go to My Discord <i class="fas fa-external-link-alt"></i></a>
+                    <a
+						href="https://discord.gg/S3UfGkW"
+						target="_blank"
+						class="btn btn-primary d-block"
+					>
+						Go to My Discord <i class="fas fa-external-link-alt"></i>
+					</a>
 				</div>
             </div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -65,7 +101,13 @@
                     <p class="card-text text-center">
 						Follow Me in Twitter!!
                     </p>
-                    <a href="https://twitter.com/AdiptaJonak" target="_blank" class="btn btn-primary d-block">Go to My Twitter <i class="fas fa-external-link-alt"></i></a>
+                    <a
+						href="https://twitter.com/AdiptaJonak"
+						target="_blank"
+						class="btn btn-primary d-block"
+					>
+						Go to My Twitter <i class="fas fa-external-link-alt"></i>
+					</a>
 				</div>
             </div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -74,7 +116,13 @@
                     <p class="card-text text-center">
 						Follow Me in Itch.io!!
                     </p>
-                    <a href="https://jonak-adipta-kalita.itch.io/" target="_blank" class="btn btn-primary d-block">Go to My Itch.io <i class="fas fa-external-link-alt"></i></a>
+                    <a
+						href="https://jonak-adipta-kalita.itch.io/"
+						target="_blank"
+						class="btn btn-primary d-block"
+					>
+						Go to My Itch.io <i class="fas fa-external-link-alt"></i>
+					</a>
 				</div>
             </div>
 			<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
@@ -83,11 +131,17 @@
                     <p class="card-text text-center">
 						Follow Me in Spotify!!
                     </p>
-                    <a href="https://open.spotify.com/user/31cypdycu52u6rj3bsfcldmqrlji" target="_blank" class="btn btn-primary d-block">Go to My Spotify <i class="fas fa-external-link-alt"></i></a>
+                    <a
+						href="https://open.spotify.com/user/31cypdycu52u6rj3bsfcldmqrlji"
+						target="_blank"
+						class="btn btn-primary d-block"
+					>
+						Go to My Spotify <i class="fas fa-external-link-alt"></i>
+					</a>
 				</div>
             </div>
 		</div>
 	</div>
 	<br />
 	<br />
-	{% endblock %}
+{% endblock %}
