--- a/templates/404Error.html
+++ b/templates/404Error.html
@@ -1,18 +1,18 @@
-	{% extends 'base.html' %}
-	{% block title %} 404 - Page Not Found {% endblock %}
-	{% block body %}
-		<div>
-            <center>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-				<h1 class="title">
-					404 - Page Not Found!!
-				</h1>
-			</center>
-		</div>
-	{% endblock %}
+{% extends "base.html" %}
+{% block title %} 404 - Page Not Found {% endblock %}
+{% block body %}
+	<div>
+		<center>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<br/>
+			<h1 class="title">
+				404 - Page Not Found!!
+			</h1>
+		</center>
+	</div>
+{% endblock %}
