--- a/templates/my_photos.html
+++ b/templates/my_photos.html
@@ -1,16 +1,24 @@
-	{% extends 'base.html' %}
-	{% block title %} My Photos {% endblock %}
-	{% block body %}
+{% extends "base.html" %}
+{% block title %} My Photos {% endblock %}
+{% block body %}
 	<div class="container">
 		{% if user.is_authenticated %}
 			{% if permission %}
 				<div class="row">
 					{% for i in my_photo %}
-						<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-							<img loading="lazy" src="/media/{{i.image}}" class="card-img-top" alt="image" />
+						<div
+							class="card mx-auto my-2 p-2 align-items-center"
+							style="width: 18rem;"
+						>
+							<img
+								loading="lazy"
+								src="/media/{{ i.image }}"
+								class="card-img-top"
+								alt="image"
+							/>
 							<div class="card-body">
 								<h5 class="card-title">
-									{{i.name}}
+									{{ i.name }}
 								</h5>
 							</div>
 						</div>
@@ -18,22 +26,52 @@
 				</div>
 				<div class="my-3">
 					{% if prev %}
-						<button class="btn btn-primary"><a class="text-light text-decoration-none" href="/my_photos?page={{prev}}">&laquo; Previous</a></button>
+						<button class="btn btn-primary">
+							<a
+								class="text-light text-decoration-none"
+								href="/my_photos?page={{ prev }}"
+							>
+								&laquo; Previous
+							</a>
+						</button>
 					{% else %}
-						<button disabled class="btn btn-primary cursor-not-allowed"><a class="text-light text-decoration-none">&laquo; Previous</a></button>
+						<button disabled class="btn btn-primary cursor-not-allowed">
+							<a class="text-light text-decoration-none">
+								&laquo; Previous
+							</a>
+						</button>
 					{% endif %}
 					
 					{% if nxt %}
-						<button class="btn btn-primary float-right"><a class="text-light text-decoration-none" href="/my_photos?page={{nxt}}">Next &raquo;</a></button>
+						<button class="btn btn-primary float-right">
+							<a
+								class="text-light text-decoration-none"
+								href="/my_photos?page={{ nxt }}"
+							>
+									Next &raquo;
+							</a>
+						</button>
 					{% else %}
-						<button disabled class="btn btn-primary float-right cursor-not-allowed"><a class="text-light text-decoration-none">Next &raquo;</a></button>
+						<button
+							disabled
+							class="btn btn-primary float-right cursor-not-allowed"
+						>
+							<a class="text-light text-decoration-none">
+								Next &raquo;
+							</a>
+						</button>
 					{% endif %}
 				</div>
 			{% else %}
 				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title text-center">You don't have Permission</h5>
-                        <a href="grant_permission/" class="btn btn-primary d-block">Grant Permission</a>
+                        <a
+							href="grant_permission/"
+							class="btn btn-primary d-block"
+						>
+							Grant Permission
+						</a>
                     </div>
                 </div>
 			{% endif %}
@@ -43,4 +81,4 @@
 	</div>
 	<br />
 	<br />
-	{% endblock %}
+{% endblock %}
