--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,6 @@
-	{% extends 'base.html' %}
-	{% block title %} Search - {{query}} {% endblock %}
-	{% block body %}
+{% extends "base.html" %}
+{% block title %} Search - {{ query }} {% endblock %}
+{% block body %}
 	<div class="container my-3">
 		<h3>Search Results:</h3>
 	</div>
@@ -9,32 +9,62 @@
 			<div class="row">
 				{% for i in GamesFav %}
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-						<img loading="lazy" src="/media/{{i.image}}" class="padded card-img-top" alt="game_img" />
+						<img
+							loading="lazy"
+							src="/media/{{ i.image }}"
+							class="padded card-img-top"
+							alt="game_img"
+						/>
 						<div class="card-body">
 							<h5 class="card-title">
 								{{ i.game_name }}
 							</h5>
-							<a href="{{ i.game_link }}" target="_blank" class="btn btn-primary">Play <i class="fas fa-external-link-alt"></i></a>
+							<a
+								href="{{ i.game_link }}"
+								target="_blank"
+								class="btn btn-primary"
+							>
+								Play <i class="fas fa-external-link-alt"></i>
+							</a>
 						</div>
 					</div>
 				{% endfor %}
 				{% for i in GamesOwn %}
 					<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-						<img loading="lazy" src="/media/{{i.image}}" class="padded card-img-top" alt="game_img" />
+						<img
+							loading="lazy"
+							src="/media/{{ i.image }}"
+							class="padded card-img-top"
+							alt="game_img"
+						/>
 						<div class="card-body">
 							<h5 class="card-title">
 								{{ i.game_name }}
 							</h5>
-							<a href="{{ i.game_link }}" target="_blank" class="btn btn-primary">Play <i class="fas fa-external-link-alt"></i></a>
+							<a
+								href="{{ i.game_link }}"
+								target="_blank"
+								class="btn btn-primary"
+							>
+								Play <i class="fas fa-external-link-alt"></i>
+							</a>
 						</div>
 					</div>
 				{% endfor %}
 				{% for i in MyPhotos %}
-					<div loading="lazy" class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
-						<img src="/media/{{i.image}}" class="card-img-top" alt="image" />
+					<div
+						loading="lazy"
+						class="card mx-auto my-2 p-2 align-items-center"
+						style="width: 18rem;"
+					>
+						<img
+							src="/media/{{ i.image }}"
+							class="card-img-top"
+							alt="image"
+						/>
 						<div class="card-body">
 							<h5 class="card-title">
-								{{i.name}}
+								{{ i.name }}
 							</h5>
 						</div>
 					</div>
@@ -42,15 +72,40 @@
 			</div>
 			<div class="my-3">
 				{% if prev %}
-					<button class="btn btn-primary"><a class="text-light text-decoration-none" href="/search?query={{query}}&page={{prev}}">&laquo; Previous</a></button>
+					<button class="btn btn-primary">
+						<a
+							class="text-light text-decoration-none"
+							href="/search?query={{ query }}&page={{ prev }}"
+						>
+							&laquo; Previous
+						</a>
+					</button>
 				{% else %}
-					<button disabled class="btn btn-primary cursor-not-allowed"><a class="text-light text-decoration-none">&laquo; Previous</a></button>
+					<button disabled class="btn btn-primary cursor-not-allowed">
+						<a class="text-light text-decoration-none">
+							&laquo; Previous
+						</a>
+					</button>
 				{% endif %}
 
 				{% if nxt %}
-					<button class="btn btn-primary float-right"><a class="text-light text-decoration-none" href="/search?query={{query}}&page={{nxt}}">Next &raquo;</a></button>
+					<button class="btn btn-primary float-right">
+						<a
+							class="text-light text-decoration-none"
+							href="/search?query={{ query }}&page={{ nxt }}"
+						>
+							Next &raquo;
+						</a>
+					</button>
 				{% else %}
-					<button disabled class="btn btn-primary float-right cursor-not-allowed"><a class="text-light text-decoration-none">Next &raquo;</a></button>
+					<button
+						disabled
+						class="btn btn-primary float-right cursor-not-allowed"
+					>
+						<a class="text-light text-decoration-none">
+							Next &raquo;
+						</a>
+					</button>
 				{% endif %}
 			</div>
 		</div>
@@ -59,7 +114,7 @@
 	{% else %}
 		<div class="container my-3">
 			<p>
-				Your search - <b>{{query}}</b> - did not match any Documents!!
+				Your search - <b>{{ query }}</b> - did not match any Documents!!
 				<br />
 				Suggestions:
 				<ul>
@@ -79,4 +134,4 @@
 			</p>
 		</div>
 	{% endif %}
-	{% endblock %}
+{% endblock %}
