--- a/templates/your_profile/your_account.html
+++ b/templates/your_profile/your_account.html
@@ -1,46 +1,88 @@
 {% extends 'base.html' %}
 {% block title %} Your Account {% endblock %}
 {% block body %}
-<br />
-<div class="container">
-	<h3>Your Profile</h3>
-	<form>
-		<div class="form-group">
-			<label for="my_accountName">Your Name</label>
-			<input type="text" class="form-control" id="my_accountName" value="{{user.first_name}}" aria-describedby="nameHelp" placeholder="Enter your Name" />
-		</div>
-		<div class="form-group">
-			<label for="my_accountUsername">Your Username</label>
-			<input type="text" class="form-control" id="my_accountUsername" value="{{user.username}}" aria-describedby="usernameHelp" placeholder="Enter your Username" />
-		</div>
-		<div class="form-group">
-			<label for="my_accountEmail1">Your Email</label>
-			<input type="email" class="form-control" id="my_accountEmail1" value="{{user.email}}" aria-describedby="emailHelp" placeholder="Enter your Email" />
-		</div>
-	</form>
-	<div>
-		<br />
-		<h3>Change Password</h3>
-		<form action="change_password/" method="post">
-			{% csrf_token %}
+	<br />
+	<div class="container">
+		<h3>Your Profile</h3>
+		<form>
 			<div class="form-group">
-				<label for="changepass_currentpass">Current Password</label>
-				<input required type="password" class="form-control" id="changepass_currentpass" name="changepass_currentpass" placeholder="Current Password" />
+				<label for="my_accountName">Your Name</label>
+				<input
+					type="text"
+					class="form-control"
+					id="my_accountName"
+					value="{{ user.first_name }}"
+					aria-describedby="nameHelp"
+					placeholder="Enter your Name"
+				/>
 			</div>
 			<div class="form-group">
-				<label for="changepass_newpass">New Password</label>
-				<input required type="password" class="form-control" id="changepass_newpass" name="changepass_newpass" placeholder="New Password" />
+				<label for="my_accountUsername">Your Username</label>
+				<input
+					type="text"
+					class="form-control"
+					id="my_accountUsername"
+					value="{{ user.username }}"
+					aria-describedby="usernameHelp"
+					placeholder="Enter your Username"
+				/>
 			</div>
 			<div class="form-group">
-				<label for="changepass_newpassconfirm">Confirm New Password</label>
-				<input required type="password" class="form-control" id="changepass_newpassconfirm"  name="changepass_newpassconfirm" placeholder="Confirm New Password" />
+				<label for="my_accountEmail1">Your Email</label>
+				<input
+					type="email"
+					class="form-control"
+					id="my_accountEmail1"
+					value="{{ user.email }}"
+					aria-describedby="emailHelp"
+					placeholder="Enter your Email"
+				/>
 			</div>
-			<div class="g-recaptcha" data-sitekey="{{RECAPTCHA_CLIENT_KEY}}"></div>
-			<br />
-			<button type="submit" class="btn btn-primary">Update</button>
 		</form>
-		<br />
-		<br />
+		<div>
+			<br />
+			<h3>Change Password</h3>
+			<form action="change_password/" method="post">
+				{% csrf_token %}
+				<div class="form-group">
+					<label for="changepass_currentpass">Current Password</label>
+					<input
+						required
+						type="password"
+						class="form-control"
+						id="changepass_currentpass"
+						name="changepass_currentpass"
+						placeholder="Current Password"
+					/>
+				</div>
+				<div class="form-group">
+					<label for="changepass_newpass">New Password</label>
+					<input
+						required
+						type="password"
+						class="form-control"
+						id="changepass_newpass"
+						name="changepass_newpass"
+						placeholder="New Password"
+					/>
+				</div>
+				<div class="form-group">
+					<label for="changepass_newpassconfirm">Confirm New Password</label>
+					<input
+						required
+						type="password"
+						class="form-control"
+						id="changepass_newpassconfirm"
+						name="changepass_newpassconfirm"
+						placeholder="Confirm New Password"
+					/>
+				</div>
+				<div class="g-recaptcha" data-sitekey="{{ RECAPTCHA_CLIENT_KEY }}"></div>
+				<br />
+				<button type="submit" class="btn btn-primary">Update</button>
+			</form>
+			<br />
+			<br />
+		</div>
 	</div>
-</div>
 {% endblock %}
