made a different app for announcements

--- a/templates/home.html
+++ b/templates/home.html
@@ -40,7 +40,7 @@
                         <p class="card-text text-center">
                             Here you'll find the Announcements.
                         </p>
-                        <a href="anouncements/" class="btn btn-primary d-block">
+                        <a href="announcements/" class="btn btn-primary d-block">
 							Go to Anouncements
 						</a>
                     </div>
