--- a/templates/about.html
+++ b/templates/about.html
@@ -7,7 +7,7 @@
 {% block body %}
 	<center>
 		<div class="aboutPage__header">
-			<div className="aboutPage__header_heading">
+			<div class="aboutPage__header_heading">
 				<h4>Hey Guys, If You've come here to know about me!!</h4>
 				<h4>Here's all you should know about me!!</h4>
 			</div>
