added some padding to the heading text in about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,8 +6,8 @@
 {% endblock %}
 {% block body %}
 	<center>
-		<div class="aboutPage__header">
-			<div class="aboutPage__header_heading">
+		<div class="header">
+			<div class="heading">
 				<h4>Hey Guys, If You've come here to know about me!!</h4>
 				<h4>Here's all you should know about me!!</h4>
 			</div>
