added my vscode extension to the announcemnets page

--- a/templates/announcements/announcements.html
+++ b/templates/announcements/announcements.html
@@ -118,6 +118,21 @@
 						</a>
 					</div>
 				</div>
+				<div class="card mx-auto my-2 p-2 align-items-center" style="width: 18rem;">
+					<div class="card-body">
+						<h5 class="card-title text-center">My VSCode Extension</h5>
+						<p class="card-text text-center">
+							Use my VSCode Extension!!
+						</p>
+						<a 
+							href="https://marketplace.visualstudio.com/items?itemName=JAKVSCodeExtension.jak-vscode-extension"
+							target="_blank"
+							class="btn btn-primary d-block"
+						>
+							LINK <i class="fas fa-external-link-alt"></i>
+						</a>
+					</div>
+				</div>
 			</div>
 		{% else %}
 			<center><h5>You need to Login or SignUp</h5></center>
