changed the keywords meta

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Jonak Adipta Kalita's Website" />
 		<meta
 			name="keywords"
-			content="Website, MyGames, MySocialMedias, MyPhotos, MyYoutubeVideos, MyWebBuilds, MyDiscordWidget"
+			content="Website, MyGames, MySocialMedias, MyPhotos, MyYoutubeVideos, MyDiscordWidget, MyVSCodeExtension"
 		/>
 		<meta name="author" content="Jonak Adipta Kalita" />
 		<meta name="publisher" content="Jonak Adipta Kalita" />
